--- a/views/admin/item/detail_item/show_feature.ejs
+++ b/views/admin/item/detail_item/show_feature.ejs
@@ -48,8 +48,8 @@
                                             <%= feature[i].qty %>
                                         </td>
                                         <td>
-                                            <img src="http://localhost:3000/<%= feature[i].imageUrl %>" alt="imageUrl"
-                                                width="70px">
+                                            <img src="https://staycation-bwa-mern.herokuapp.com/<%= feature[i].imageUrl %>"
+                                                alt="imageUrl" width="70px">
                                         </td>
                                         <td>
                                             <form action="/admin/feature/<%= feature[i].id %>?_method=DELETE"
